# course-optimisation-sample

./: CMakeLists.txt  EXO-2.md  EXO-3.md  main.cpp
exo-2/: callgrind.out.27405.initial
scenes/: malformed.json
src/objloader/: OBJ_Loader.h
src/raymath/: Vector3.cpp
src/rayscene/: Camera.cpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
tests/: image_compare.cpp  md5_compare.cpp
